src/objects/Employee_SM__c.object
<CustomObject>
    <description>Employees for School Management</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the employee</description>
        <inlineHelpText>Email of the employee</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_id__c</fullName>
        <description>Employee id</description>
        <displayFormat>EMP-{000000}</displayFormat>
        <inlineHelpText>Employee id</inlineHelpText>
        <label>Employee id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the employee</description>
        <inlineHelpText>First name of the employee</inlineHelpText>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the employee</description>
        <inlineHelpText>Last name of the employee</inlineHelpText>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile of the Employee</description>
        <inlineHelpText>Mobile of the Employee</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of the employee</description>
        <inlineHelpText>Phone of the employee</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>